--- a/not-wordle-stats.htm
+++ b/not-wordle-stats.htm
@@ -128,6 +128,8 @@
     <input type="number" id="guesses_6" name="guesses_6"><br>
     <br>
     <button type="button" onclick="setStats()">Set stats</button>
+    <br >
+    <a href="not-wordle.htm">Back to game</a> 
     
 
 
